# swagger-output.json
@@ -21,6 +21,123 @@
           }
         }
       }
+    },
+    "/api/feedcomment/": {
+      "get": {
+        "tags": [
+          "FeedComment"
+        ],
+        "summary": "피드댓글 조회",
+        "description": "여기는 피드댓글을 보여주는 곳 입니다.",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "FeedComment"
+        ],
+        "summary": "피드댓글 생성",
+        "description": "여기는 피드댓글을 작성하는 곳 입니다.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "userId": {
+                  "example": "any"
+                },
+                "feedId": {
+                  "example": "any"
+                },
+                "comment": {
+                  "example": "any"
+                },
+                "nickname": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
+      "patch": {
+        "tags": [
+          "FeedComment"
+        ],
+        "summary": "피드댓글 수정",
+        "description": "여기는 피드댓글을 수정하는 곳 입니다.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "commentId": {
+                  "example": "any"
+                },
+                "comment": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "FeedComment"
+        ],
+        "summary": "피드댓글 삭제",
+        "description": "여기는 피드댓글을 삭제하는 곳 입니다.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "commentId": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
     }
   }
 }
